# LunatedEpsilon

./: .gitignore  CMakeLists.txt  README.md  converter.py  main.py  main.spec  requirements.txt  version.txt
resources/: resources.qrc
src/: Converter.cpp  MainWindow.cpp  MainWindow.h  ThemeManager.cpp  ThemeManager.h  main.cpp
